rework vampire forest (#1028)
* add cursed grass

close #995

* rebuild biome with new blocks

* add cursed roots

* rename forest related blocks

* add cursed vines

* rename cursed vine to cursed bork

* add corner cursed bork

* let cursed bork suck entities

* modify cursed bork model

* final touch for worldgen and colors

* add dark/cursed spruce blocks

* rename cursed bork to cursed bark

* drain cursed bark drain food/blood

- fix sign tile entity
- don't suck creative/spectator player
- brighten vampire fog/sky forest color
- add logs to logs tag

* complete item/block tags

* change block materials colors